M       vbm_surf_vol2surf.m

(1) Recompiled CAT_3dVol2Surf.c to enable sampling at only one defined position.
(2) Some cosmetic changes to cg_vbm_stools.m and commented out functions that
    are not yet finished.
------------------------------------------------------------------------
r724 | gaser | 2015-09-14 11:05:33

M       CHANGES.txt
M       cg_vbm_stools.m

Shortened some names in cg_vbm_stools.m.
------------------------------------------------------------------------
r725 | gaser | 2015-09-14 11:12:02

M       CHANGES.txt
M       cg_vbm_stools.m

Disabled mapping in native space in  cg_vbm_stools.m. because it is not yet 
working because of coordination issues.
------------------------------------------------------------------------
r726 | gaser | 2015-09-14 11:16:12

M       CHANGES.txt
M       cg_vbm_opts.m
M       cg_vbm_run.m
M       cg_vbm_write.m
M       tbx_cfg_vbm.m

(1) Removed options for SPM12 bias correction form GUI.
(2) Adapted some fucntions according to (1).
(3) pause(rand) did not work properly, now always pause(1) is used in 
    cg_vbm_write.m
------------------------------------------------------------------------
r727 | gaser | 2015-09-14 14:55:31

M       CHANGES.txt
A  +    templates_surfaces/lh.central.freesurfer.gii
D       templates_surfaces/lh.central.gii
A  +    templates_surfaces/lh.sphere.freesurfer.gii
D       templates_surfaces/lh.sphere.gii
A  +    templates_surfaces/rh.central.freesurfer.gii
D       templates_surfaces/rh.central.gii
A  +    templates_surfaces/rh.sphere.freesurfer.gii
D       templates_surfaces/rh.sphere.gii
M       vbm_spm.m
M       vbm_surf_avg.m
M       vbm_surf_createCS.m
M       vbm_surf_resamp.m
M       vbm_surf_resamp_freesurfer.m
M       vbm_surf_resample.m

Renamed ?h.sphere.gii and ?h.central.gii to ?h.central.freesurfer.gii
and ?h.sphere.freesurfer.gii and changed resp. files.

------------------------------------------------------------------------
r728 | gaser | 2015-09-14 15:28:55